--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ a  {
 
 a:hover {
   transform: scale(105%);
-  text-decoration: underline;
 }
 footer {
   width: 100%;
@@ -117,4 +116,7 @@ footer {
 }
 .copy {
   font-size: 18px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 600;
 }
